@@ -333,7 +333,4 @@ ASM_NAME(synth_1to1_i586_asm):
 	addl $12,%esp
 	ret
 
-/* Mark non-executable stack. */
-#if defined(__linux__) && defined(__ELF__)
-.section .note.GNU-stack,"",%progbits
-#endif
+NONEXEC_STACK
